--- a/src/main/java/com/mycompany/proyectoprogra/igu/ventanaCliente.form
+++ b/src/main/java/com/mycompany/proyectoprogra/igu/ventanaCliente.form
@@ -129,6 +129,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="NombreTXT">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NombreTXTActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="volverBTN">
           <Properties>
